[tool.poetry]
name = "repl_python3_Team-Bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
googletrans = "^3.0.0"
replit = "^3.1.0"
flask = "^2.0.1"
deep-translator = "^1.4.4"
python-dotenv = "^0.17.1"
youtube-dl = "^2021.5.16"
google-images-download = "^2.8.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
